package db;


message SmallRankRecord{
	optional int32 Rank=1;
	optional int32 Id=2;
	optional int32 Val=3;
	optional string Name=4;
}

message LimitShopItem{
	optional int32 CommodityId=1;
	optional int32 LeftNum=2;
}

message PlayerInfo{
	optional int32 Coin=1;
	optional int32 Diamond=2;
	optional int32 CurMaxStage=3;
	optional int32 TotalStars=4;
	optional int32 CurPassMaxStage=5;
	optional int32 MaxUnlockStage=6;
	optional int32 MaxChapter=7;
	optional int32 CreateUnix=8;
	optional int32 Lvl=9;
	optional int32 Exp=10;
	optional int32 FirstPayState=11;
	optional int32 ChangeNameCount=12;
	optional int32 LastDialyTaskUpUinx=13;
	optional string Icon=14;
	optional string CustomIcon=15;
	optional int32 CharmVal=18;
	optional int32 LastLogin=19;
	optional int32 Zan=20;
	optional int32 Spirit=22;
	optional int32 FriendPoints=23;
	optional int32 SaveLastSpiritPointTime=26;
	optional int32 LastRefreshShopTime=27;
	optional int32 LastMapChestUpUnix=30;
	optional int32 LastMapBlockUpUnix=31;
	optional int32 VipLvl=32;
	optional int32 DayHelpUnlockCount=35;
	optional int32 DayHelpUnlockUpDay=36;
	optional int32 FriendMessageUnreadCurrId=37;
	optional int32 VipCardEndDay=38;
	optional string Channel=42;
	optional int32 DayBuyTiLiCount=43;
	optional int32 DayBuyTiLiUpDay=44;
}

message PlayerRole{
	optional int32 Id=1;
	optional int32 Jingjie=2;
	optional int32 Level=3;
}

message PlayerRoleList{
	repeated PlayerRole List=1;
}

message PlayerStage{
	optional int32 StageId=1;
	optional int32 Stars=2;
	optional int32 LastFinishedUnix=3;
	optional int32 TopScore=4;
	optional int32 CatId=5;
	optional int32 PlayedCount=6;
	optional int32 PassCount=7;
}

message PlayerStageList{
	repeated PlayerStage List=1;
}

message PlayerChapterUnLock{
	optional int32 ChapterId=1;
	repeated int32 PlayerIds=2;
	repeated int32 CurHelpIds=3;
	optional int32 StartUnix=4;
}

message PlayerItem{
	optional int32 ItemCfgId=1;
	optional int32 ItemNum=2;
	optional int32 StartTimeUnix=3;
	optional int32 RemainSeconds=4;
}

message PlayerItemList{
	repeated PlayerItem List=1;
}

message PlayerShopItem{
	optional int32 Id=1;
	optional int32 LeftNum=2;
}

message PlayerShopItemList{
	repeated PlayerShopItem List=1;
}

message PlayerShopLimitedInfo{
	optional int32 LimitedDays=1;
	optional int32 LastSaveTime=2;
}

message PlayerShopLimitedInfoList{
	repeated PlayerShopLimitedInfo List=1;
}

message PlayerChest{
	optional int32 Pos=1;
	optional int32 ChestId=2;
	optional int32 OpenSec=3;
}

message PlayerChestList{
	repeated PlayerChest List=1;
}

message PlayerMail{
	optional int32 MailId=1;
	optional int32 MailType=2;
	optional string MailTitle=3;
	optional int32 SenderId=4;
	optional string SenderName=5;
	optional string Content=6;
	optional int32 SendUnix=7;
	optional int32 OverUnix=8;
	repeated int32 ObjIds=9;
	repeated int32 ObjNums=10;
	optional int32 State=11;
	repeated int32 ExtraDatas=12;
}

message PlayerMailList{
	repeated PlayerMail List=1;
}

message PlayerPayBack{
	optional int32 PayBackId=1;
	optional string Value=2;
}

message PlayerPayBackList{
	repeated PlayerPayBack List=1;
}

message PlayerOptions{
	repeated int32 Values=1;
}

message PlayerDialyTask{
	optional int32 TaskId=1;
	optional int32 Value=2;
	optional int32 RewardUnix=3;
}

message PlayerDialyTaskList{
	repeated PlayerDialyTask List=1;
}

message PlayerAchieve{
	optional int32 AchieveId=1;
	optional int32 Value=2;
	optional int32 RewardUnix=3;
}

message PlayerAchieveList{
	repeated PlayerAchieve List=1;
}

message PlayerFinishedAchieve{
	optional int32 AchieveId=1;
}

message PlayerFinishedAchieveList{
	repeated PlayerFinishedAchieve List=1;
}

message PlayerDailyTaskWholeDaily{
	optional int32 CompleteTaskId=1;
}

message PlayerDailyTaskWholeDailyList{
	repeated PlayerDailyTaskWholeDaily List=1;
}

message PlayerSevenActivity{
	optional int32 ActivityId=1;
	optional int32 Value=2;
	optional int32 RewardUnix=3;
}

message PlayerSevenActivityList{
	repeated PlayerSevenActivity List=1;
}

message PlayerSignInfo{
	optional int32 LastSignDay=1;
	optional int32 CurSignSum=2;
	optional int32 CurSignSumMonth=3;
	repeated int32 CurSignDays=4;
	repeated int32 RewardSignSum=5;
}

message PlayerGuides{
	optional int32 GuideId=1;
	optional int32 SetUnix=2;
}

message PlayerGuidesList{
	repeated PlayerGuides List=1;
}

message PlayerFriendRelative{
	optional int32 LastGiveFriendPointsTime=1;
	optional int32 GiveNumToday=2;
	optional int32 LastRefreshTime=3;
}

message PlayerFriend{
	optional int32 FriendId=1;
	optional string FriendName=2;
	optional string Head=3;
	optional int32 Level=4;
	optional int32 VipLevel=5;
	optional int32 LastLogin=6;
	optional int32 LastGivePointsTime=7;
}

message PlayerFriendList{
	repeated PlayerFriend List=1;
}

message PlayerFriendReq{
	optional int32 PlayerId=1;
	optional string PlayerName=2;
	optional int32 ReqUnix=3;
}

message PlayerFriendReqList{
	repeated PlayerFriendReq List=1;
}

message PlayerFriendPoint{
	optional int32 FromPlayerId=1;
	optional int32 GivePoints=2;
	optional int32 LastGiveTime=3;
	optional int32 IsTodayGive=4;
}

message PlayerFriendPointList{
	repeated PlayerFriendPoint List=1;
}

message PlayerFriendChatUnreadId{
	optional int32 FriendId=1;
	repeated int32 MessageIds=2;
	optional int32 CurrMessageId=3;
}

message PlayerFriendChatUnreadIdList{
	repeated PlayerFriendChatUnreadId List=1;
}

message PlayerFriendChatUnreadMessage{
	optional int64 PlayerMessageId=1;
	optional bytes Message=2;
	optional int32 SendTime=3;
	optional int32 IsRead=4;
}

message PlayerFriendChatUnreadMessageList{
	repeated PlayerFriendChatUnreadMessage List=1;
}

message PlayerCustomData{
	optional bytes CustomData=1;
}

message PlayerChaterOpenRequest{
	optional bytes CustomData=1;
}

message PlayerHandbookItem{
	optional int32 Id=1;
}

message PlayerHandbookItemList{
	repeated PlayerHandbookItem List=1;
}

message PlayerHeadItem{
	optional int32 Id=1;
}

message PlayerHeadItemList{
	repeated PlayerHeadItem List=1;
}

message PlayerActivity{
	optional int32 CfgId=1;
	repeated int32 States=2;
	repeated int32 Vals=3;
}

message PlayerActivityList{
	repeated PlayerActivity List=1;
}

message PlayerSuitAward{
	optional int32 Id=1;
	optional int32 AwardTime=2;
}

message PlayerSuitAwardList{
	repeated PlayerSuitAward List=1;
}

message PlayerZan{
	optional int32 PlayerId=1;
	optional int32 ZanTime=2;
	optional int32 ZanNum=3;
}

message PlayerZanList{
	repeated PlayerZan List=1;
}

message PlayerWorldChat{
	optional int32 LastChatTime=1;
	optional int32 LastPullTime=2;
	optional int32 LastMsgIndex=3;
}

message PlayerAnouncement{
	optional int32 LastSendTime=1;
}

message PlayerFirstDrawCard{
	optional int32 Id=1;
	optional int32 Drawed=2;
}

message PlayerFirstDrawCardList{
	repeated PlayerFirstDrawCard List=1;
}

message PlayerTalkForbid{
	optional int32 EndUnix=1;
	optional string ForbidReason=2;
}

message PlayerServerReward{
	optional int32 RewardId=1;
	optional int32 EndUnix=2;
}

message PlayerServerRewardList{
	repeated PlayerServerReward List=1;
}

